<resources>
    <string name="app_name">CMS Demo</string>
    <string name="welcome_cms_demo_project">Welcome CMS Demo Project</string>
    <string name="ok">OK</string>

    // Ads Kit
    <string name="ads_screen">ADS SCREEN</string>
    <string name="show_interstitial_ads">Show Interstitial Ads</string>
    <string name="show_rewarded_ads">Show Rewarded Ads</string>
    <string name="show_banner_ad">Show Banner Ad</string>
    <string name="banner_ad_loaded">Banner Ad Loaded!</string>
    <string name="banner_ad_failed">Banner Ad Failed: </string>
    <string name="banner_ad_loading">Banner Ad Loading…</string>
    <string name="interstitial_ad_loading">Interstitial Ad Loading…</string>
    <string name="rewarded_ad_loading">Rewarded Ad Loading…</string>
    <string name="splash_ad_loading">Splash Ad Loading…</string>
    <string name="show_interstitial_ad">Show Interstitial Ad</string>
    <string name="show_splash_ad">Show Splash Ad</string>
    <string name="interstitial_ad_loaded">Interstitial Ad Loaded!</string>
    <string name="rewarded_ad_loaded">Rewarded Ad Loaded!</string>
    <string name="splash_ad_loaded">Splash Ad Loaded!</string>
    <string name="interstitial_ad_failed">Interstitial Ad Failed: </string>
    <string name="rewarded_ad_failed">Rewarded Ad Failed: </string>
    <string name="splash_ad_failed">Splash Ad Failed: </string>
    <string name="earned_reward_score">"Earned Reward(score): "</string>
    <string name="ads_kit">Ads Kit</string>

    // Map Kit and Location Kit
    <string name="map_screen">MAP SCREEN</string>
    <string name="gps_enabled">GPS Enabled</string>
    <string name="gps_enabling_failed">"GPS Enabling Failed "</string>
    <string name="gps_enabling_cancelled">GPS Enabling Cancelled</string>
    <string name="request_location_updates_is_successful">Request location updates is successful!</string>
    <string name="marker">Marker</string>
    <string name="snippet">Snippet</string>
    <string name="latitude">"Latitude: "</string>
    <string name="longitude">"Longitude: "</string>
    <string name="failed_to_get_last_known_location">Failed to get last known location</string>
    <string name="location_unavailable_last_location">LOCATION_UNAVAILABLE_last_location</string>
    <string name="gps_disabled_last_location">GPS_DISABLED_last_location</string>
    <string name="no_last_location_last_location">NO_LAST_LOCATION_last_location</string>
    <string name="failed_to_request_location_updates">Failed to request location updates</string>
    <string name="location_unavailable_location_updates">LOCATION_UNAVAILABLE_location_updates</string>
    <string name="gps_disabled_location_updates">GPS_DISABLED_location_updates</string>
    <string name="no_last_location_location_updates">NO_LAST_LOCATION_location_updates</string>
    <string name="map_location_kit"><![CDATA[Map & Location Kit]]></string>

    // Account Kit
    <string name="account_screen">ACCOUNT SCREEN</string>
    <string name="account_kit">Account Kit</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="sign_out_failed">Sign-out failed: %1$s</string>
    <string name="sign_out_cancelled">Sign-out cancelled</string>
    <string name="signed_out">Signed out</string>
    <string name="sign_in_cancelled_activity_result">Sign-in cancelled activity result</string>
    <string name="sign_in_failed_activity_result">Sign-in failed activity result: %1$s</string>
    <string name="sign_in_cancelled">Sign-in cancelled</string>
    <string name="please_sign_in_first">Please sign in first.</string>
    <string name="get_last_signed_account">Get Last Signed Account</string>
    <string name="id_email_name">"\n                    ID: %1$s\n                    Email: %2$s\n                    Name: %3$s\n                "</string>

    // Auth Service
    <string name="auth_screen">AUTH SCREEN</string>
    <string name="auth_service">Auth Service</string>
    <string name="email_and_password_can_t_be_blank">Email and Password can\'t be blank</string>
    <string name="welcome_user_id">"Welcome %1$s!"</string>
    <string name="welcome_user_phone">"Welcome %1$s"</string>
    <string name="welcome">Welcome!</string>
    <string name="successfully_sign_in">SUCCESSFULLY Sign In!</string>
    <string name="email_password">Email/Password</string>
    <string name="phone_sign_in">Phone Sign in</string>
    <string name="phone_and_password_can_t_be_blank">Phone Number and Password can\'t be blank</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_your_account">Create your account!</string>
    <string name="verification_code">Verification code</string>
    <string name="successfully_signed_up">SUCCESSFULLY Signed Up!</string>
    <string name="code_can_t_be_blank">Code can\'t be blank</string>
    <string name="verify">Verify</string>
    <string name="gms_phone_code">+1</string>

    // Translate Kit
    <string name="translate_screen">TRANSLATE SCREEN</string>
    <string name="translate_kit">Translate Kit</string>
    <string name="source_lang">de</string>
    <string name="target_lang">tr</string>
    <string name="text_can_t_be_blank">Text can\'t be blank</string>
    <string name="required">%1$s Required</string>
    <string name="not_required">%1$s NotRequired</string>
    <string name="model_downloaded">%1$s model downloaded!</string>
    <string name="translate">Translate</string>
    <string name="text">Text…</string>
    <string name="de_tr">DE - TR</string>

    // Credit Card Scanner
    <string name="credit_card_scanner">Credit Card Scanner</string>
    <string name="credit_card_scanner_screen">CREDIT CARD SCANNER SCREEN</string>
    <string name="scan_result">Card Number: %1$s \nExpire Date: %2$s</string>
    <string name="start_scan">Start Scan</string>

    // Text To Speech
    <string name="text_to_speech">Text To Speech</string>
    <string name="text_to_speech_screen">TEXT TO SPEECH SCREEN</string>
</resources>